<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.epfl.sweng.project.chat.BasicChat"
    android:background="@drawable/background_hd"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvNoMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone"
        android:padding="6dp"
        android:background="#83000000"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/white" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/chatToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolbarColoredBackArrow"
        popupTheme="@style/AppTheme"
        app:titleTextColor="@color/white"
        app:title=" "
        app:titleMargin="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:id="@+id/layoutUserInfos">

            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/avatarToolbar"
                android:src="@drawable/default_avatar"
                android:scaleType="fitCenter"
                app:riv_corner_radius="30dip"
                app:riv_mutate_background="true"
                app:riv_tile_mode="clamp"
                app:riv_oval="true"
                android:layout_height="40dp"
                android:layout_width="40dp"

                android:layout_marginRight="13dp"
                android:layout_marginEnd="13dp"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:text="@string/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvUsername"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal|bold"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>




    <ListView
        android:id="@+id/msgListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/chatToolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:keepScreenOn="false"
        android:minHeight="42dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:minHeight="42dp">


            <EditText
                android:id="@+id/msgEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:maxHeight="200dp"
                android:minHeight="17dp"
                android:nextFocusForward="@+id/sendMessageButton"
                android:paddingBottom="9dp"
                android:paddingTop="9dp" />

            <Button
                android:id="@+id/sendMessageButton"
                android:background="@drawable/send_button"
                android:nextFocusForward="@+id/msgEditText"
                android:onClick="sendUserMessage"
                android:layout_gravity="bottom|center_vertical"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginBottom="5dp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
